add dependency check to pre-commit and travis

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "pretest": "test/pretest.sh",
     "start": "node index.js",
     "test": "npm run units",
-    "travis": "node ./test/travis-config.js && npm test && npm run end-to-end",
+    "travis": "npm run check-dependencies && node ./test/travis-config.js && npm test && npm run end-to-end",
     "units": "node test/run.js | tap-spec",
     "validate": "npm ls",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "check-dependencies": "node_modules/.bin/npm-check --production"
   },
   "repository": {
     "type": "git",
@@ -66,6 +67,7 @@
     "istanbul": "^0.4.3",
     "jshint": "^2.8.0",
     "naivedb": "^1.0.7",
+    "npm-check": "^5.4.0",
     "pelias-mock-logger": "^1.0.1",
     "precommit-hook": "^3.0.0",
     "proxyquire": "^1.7.10",
@@ -78,6 +80,7 @@
   "pre-commit": [
     "lint",
     "validate",
-    "test"
+    "test",
+    "check-dependencies"
   ]
 }
